# north-eleven-labs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.huggingface  LICENSE  README.md  UI_IMPROVEMENTS.md  UX_IMPROVEMENTS_V2.md  docker-entrypoint.sh  pyproject.toml
backend/: .gitignore  Dockerfile  Dockerfile.cpu  README.md  __init__.py  main.py  start_server.sh
frontend/: .env.example  Dockerfile  README.md  index.html  nginx.conf  package.json  tailwind.config.js  使用說明.md
frontend/src/: App.tsx  index.css
