[project]
name = "qwen3tts-test"
version = "0.1.0"
description = "Qwen3-TTS CustomVoice testing environment"
requires-python = ">=3.12"
dependencies = [
    "qwen-tts",
    "torch>=2.0.0",
    "soundfile",
    "huggingface-hub",
    "tqdm",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "ipython",
]
